# era-js

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md
site/: index.js  index.ts  package-lock.json  package.json  signer.ts  types.ts
src/: crypto.rs  erasure_coding.rs  key.rs  lib.rs  seed.rs
src/chains/: errors.rs  mod.rs  polkadot.rs
src/crypto/: crypto.rs  erasure_coding.rs  key.rs  mod.rs
src/era/: cryptography.rs  mod.rs  wallet.rs
tests/: seed.rs
