[package]
name = "era-js"
version = "0.1.0"
authors = ["BukiOffor <ebuka2264@yahoo.com>"]
edition = "2018"
description = "A package that handles the cryptographic operations for the ERA project"
repository = "https://github.com/BukiOffor/era-js"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = "0.3"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
reed-solomon-erasure = "6.0.0"
tiny-bip39 = "2.0.0"
hex = "*"
serde = { version="1.0.217", features=["derive"]}
serde_json = { version = "1.0.81", features = ["preserve_order"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"
bip32 = "0.5.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }



[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
